# Xbot

./: .gitignore
launch/: camera.launch.py
launch/config/: params.yaml
scripts/: detect_test.py  export_onnx.sh
src/camera/: CMakeLists.txt  package.xml
src/camera/include/camera/: camera_pub.hpp  camera_sub.hpp
src/camera/src/: camera_pub.cpp  camera_sub.cpp
src/detect_python/: package.xml  setup.cfg  setup.py
src/detect_python/detect/: detect_sub_pub.py  utils.py  yolo11.py  yolo11_onnx.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: FrameInfo.msg
src/sub_pub/: CMakeLists.txt  package.xml
src/sub_pub/src/: camera_pub.cpp  camera_sub.cpp  image_pub.cpp  video_pub.cpp
